--- a/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep/MainPage.xaml
+++ b/sessao05/App01_ConsultarCep/App01_ConsultarCep/App01_ConsultarCep/MainPage.xaml
@@ -5,7 +5,7 @@
              x:Class="App01_ConsultarCep.MainPage">
 
     <StackLayout BackgroundColor="#FFBF00" Padding="30" Spacing="30">
-        <Image Source="logo-correios.png" x:Name="LOGO" />
+        <Image Source="logoCorreios.png" x:Name="LOGO" />
         <Entry Placeholder="Digite o cep" PlaceholderColor="#FFBF00" BackgroundColor="#FFFFFF" x:Name="CEP" />
         <Button Text="Buscar CEP" TextColor="#FFFFFF" BackgroundColor="#00416B" x:Name="BOTAO" />
         
